--- a/spring-scala-tx-neo4j/pom.xml
+++ b/spring-scala-tx-neo4j/pom.xml
@@ -32,6 +32,10 @@
             <artifactId>neo4j-kernel</artifactId>
             <type>test-jar</type>
         </dependency>
+        <dependency>
+            <groupId>org.springframework</groupId>
+            <artifactId>spring-orm</artifactId>
+        </dependency>
     </dependencies>
 
     <build>
