wip + beginning slick integration

--- a/spring-scala-tx-neo4j/pom.xml
+++ b/spring-scala-tx-neo4j/pom.xml
@@ -24,6 +24,10 @@
             <version>${project.version}</version>
         </dependency>
         <dependency>
+            <groupId>com.typesafe</groupId>
+            <artifactId>slick_2.10</artifactId>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
