--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
                 <version>1.0.1</version>
             </dependency>
             <dependency>
+                <groupId>com.typesafe</groupId>
+                <artifactId>slick_2.10</artifactId>
+                <version>1.0.0-RC1</version>
+                <scope>test</scope>
+            </dependency>
+            <dependency>
                 <groupId>junit</groupId>
                 <artifactId>junit</artifactId>
                 <version>4.10</version>
@@ -55,6 +61,12 @@
                 <groupId>org.apache.geronimo.specs</groupId>
                 <artifactId>geronimo-jpa_2.0_spec</artifactId>
                 <version>1.1</version>
+                <optional>true</optional>
+            </dependency>
+            <dependency>
+                <groupId>org.apache.geronimo.specs</groupId>
+                <artifactId>geronimo-jta_1.1_spec</artifactId>
+                <version>1.1.1</version>
                 <optional>true</optional>
             </dependency>
             <dependency>
